--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -16,5 +16,11 @@
         <li><%= listing.location %></li>
         <li><%= listing.country %></li>
     </ul>
+    <br>
+    <a href="/Listing/<%= listing._id %>/edit">Edit this Listing</a>
+    <br><br>
+    <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
+        <button>Delete This Listing</button>
+    </form>
 </body>
 </html>
