--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,19 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WanderLust</title>
-  </head>
+<% layout('/layouts/boilerplate') -%>
   <body>
     <h3>All Listings</h3>
     <form method="GET" action="/listings/new">
-      <button>Create New Listing</button>
+      <!-- <button>Create New Listing</button> -->
     </form>
-    <ul>
-      <% for(let listing of allListings) { %>
-      <li><a href="/listings/<%= listing._id %>"> <%= listing.title %> </a></li>
-      <% } %>
-    </ul>
+
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 row-cols-3">
+          <% for (let listing of allListings) { %>
+            <div class="card col" onclick="window.location.href='/listings/<%= listing._id %>'">
+              <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
+              <div class="card-img-overlay"></div>
+              <div class="card-body">
+                <p class="card-text">
+                  <b><%= listing.title %></b><br>
+                  &#8377;<%= listing.price.toLocaleString("en-IN") %> / night
+                </p>
+                <a href="/listings/<%= listing._id %>" class="btn btn-primary">Rent</a>
+              </div>
+            </div>
+        
+    <% } %>
+  </div>
+
   </body>
-</html>
