--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,26 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
+<% layout('/layouts/boilerplate') -%>
 <body>
-    <h3>Listing Details</h3>
-    <ul>
-        <li><%= listing.title %></li>
-        <li><%= listing.description %></li>
-        <li><img src="<%= listing.image.url %>"></li>
-        <li>&#8377;<%= listing.price.toLocaleString("en-IN")
-            %></li>
-        <li><%= listing.location %></li>
-        <li><%= listing.country %></li>
-    </ul>
-    <br>
-    <a href="/Listing/<%= listing._id %>/edit">Edit this Listing</a>
-    <br><br>
-    <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
-        <button>Delete This Listing</button>
-    </form>
+
+    <div class="row mt-3">
+        <div class="col-8 offset-3">
+                <h3>Listing Details:</h3>
+        </div>
+            <div class="card col-6 offset-3 show-card">
+                <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="Listing image">
+                <div class="card-body">
+                <p class="card-text">
+                    <b><%= listing.title %></b><br>
+                    <%= listing.description %> <br>
+                    &#8377;<%= listing.price.toLocaleString("en-IN")%> <br>
+                    <%= listing.location %><br>
+                    <%= listing.country %><br>
+                </p>
+                </div>
+                <br>
+    <div class="btns">
+
+        <a href="/Listing/<%= listing._id %>/edit" class="btn btn-dark add-btn">Edit</a>
+
+        <form method="post" action="/listings/<%= listing._id %>?_method=DELETE"></form>
+        <button class="btn btn-dark offset-1">Delete</button>
+        </form>
+
+    </div>
+    
+</div>
+       
+</div>
+<br><br>
 </body>
-</html>
