flash massages are added for proper user experience

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -20,8 +20,7 @@
                 <div class="btns">
 
                     <a href="/Listings/<%= listing._id %>/edit" class="btn btn-dark add-btn">Edit</a>
-
-                    <form method="post" action="/listings/<%= listing._id %>?_method=DELETE"></form>
+                    <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
                     <button class="btn btn-dark offset-1">Delete</button>
                     </form>
 
