--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -20,7 +20,7 @@
       <div class="mb-3">
         <label for="image" class="form-lable">Image URL</label> 
         <input
-        name="listing[image[url]]"
+        name="listing[image][url]"
         value="<%= listing.image.url %>" 
         type="text"
         class="form-control"/>
