--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -22,7 +22,7 @@
     <div class="mb-3">
       <label for="image" class="form-lable">Image URL</label> 
       <input
-        name="listing[image]"
+        name="listing[image][url]"
         placeholder="enter image URL/Link"
         type="text"
         class="form-control"/>
