--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -6,7 +6,7 @@
 <% } %>
 
 <% if (error && error.length > 0) { %>
-    <div class="alert alert-denger d-flex align-items-center alert-dismissible fade show col-6 offset-3" role="alert">
+    <div class="alert alert-danger d-flex align-items-center alert-dismissible fade show col-6 offset-3" role="alert">
         <%= error %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
