--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -44,23 +44,26 @@
                     <hr>
                     <p><b>All Reviews</b></p> 
 
-                    <div class="row">
-                    <% for(review of listing.reviews) { %>
-                        <div class="card col-5 ms-3 mb-3">
-                            <div class="card-body">
-                                <h5 class="card-title">Pravin</h5>
-                                <p class="card-text"><%= review.comment %></p>
-                                <p class="card-text"><%= review.rating %></p>
-                            </div>
-                            <form method="post" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mb-3">
-                                <button class="btn btn-sm btn-dark">Delete</button>
-                            </form>
+                    <% if (listing.reviews && listing.reviews.length > 0) { %>
+                        <div class="row">
+                            <% for (let review of listing.reviews) { %>
+                                <div class="card col-5 ms-3 mb-3">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Pravin</h5>
+                                        <p class="card-text"><%= review.comment %></p>
+                                        <p class="card-text"><%= review.rating %></p>
+                                    </div>
+                                    <form method="post" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mb-3">
+                                        <button class="btn btn-sm btn-dark">Delete</button>
+                                    </form>
+                                </div>
+                            <% } %> 
                         </div>
-                    <% } %> 
-                    </div>
+                    <% } else { %>
+                        <p>No reviews yet.</p>
+                    <% } %>
                 </div>
 
         </div>
     </div>
        
-
