--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,96 @@
 <% layout('/layouts/boilerplate') -%>
-    <h3>All Listings</h3>
-    <form method="GET" action="/listings/new">
-      <!-- <button>Create New Listing</button> -->
-    </form>
+    <style>
+      #filters {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+      }
+      
+      .filter {
+        text-align: center;
+        margin-right: 2rem;
+        margin-top: 2rem;
+        opacity: 0.7;
+      }
+      
+      .filter:hover {
+        opacity: 1;
+        cursor: pointer;
+      }
 
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 row-cols-3">
+      .filter p {
+        font-size: 0.8rem;
+      }
+
+      .tax-toggle {
+        border: 1px solid black;
+        border-radius: 1rem;
+        height: 3.25rem;
+        padding: 1rem;
+        margin-left: 2rem;
+        display: flex;
+        align-items: center;
+      }
+
+      .tax-info {
+        display: none;
+      }
+    </style>
+
+  <div id="filters">
+    <div class="filter">
+      <div><i class="fa-solid fa-fire"></i></div>
+      <p>Trending</p>
+    </div>
+    <div class="filter">
+      <div><i class="fa-solid fa-bed"></i></div>
+      <p>Rooms</p>
+    </div>
+    <div class="filter">
+      <div><i class="fa-solid fa-mountain-city"></i></div>
+      <p>Iconic Cities</p>
+    </div>
+    <div class="filter">
+      <div><i class="fa-solid fa-mountain"></i></div>
+      <p>Mountains</p>
+    </div>
+    <div class="filter">
+      <div><i class="fa-brands fa-fort-awesome"></i></div>
+      <p>Castles</p>
+    </div>
+    <div class="filter">
+      <div><i class="fa-solid fa-person-swimming"></i></div>
+      <p>Amezig Pools</p>
+    </div>
+    <div class="filter">
+      <div><i class="fa-solid fa-campground"></i></div>
+      <p>Camping</p>
+    </div>
+    <div class="filter">
+      <div><i class="fa-solid fa-cow"></i></div>
+      <p>Farms</p>
+    </div>
+    <div class="filter">
+      <div><i class="fa-regular fa-snowflake"></i></div>
+      <p>Arctic</p>
+    </div>
+    <div class="filter">
+      <div><i class="fa-solid fa-igloo"></i></div>
+      <p>Domes</p>
+    </div>
+    <div class="filter">
+      <div><i class="fa-solid fa-ship"></i></div>
+      <p>Boat</p>
+    </div>
+    <div class="tax-toggle">
+      <div class="form-check-reverse form-switch">
+        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+        <label class="form-check-label" for="flexSwitchCheckDefault">Display Total After Taxes</label>
+      </div>
+    </div>
+  </div>
+
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 row-cols-3 mt-3">
           <% for (let listing of allListings) { %>
             <div class="card col listing-card" onclick="window.location.href='/listings/<%= listing._id %>'">
               <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
@@ -13,6 +99,7 @@
                 <p class="card-text">
                   <b><%= listing.title %></b><br>
                   &#8377;<%= listing.price.toLocaleString("en-IN") %> / night
+                  <i class="tax-info">&nbsp; +18% GST</i>
                 </p>
                 <a href="/listings/<%= listing._id %>" class="btn btn-primary">Rent</a>
               </div>
@@ -21,3 +108,18 @@
     <% } %>
   </div>
 
+  <script>
+    let taxSwitch = document.getElementById("flexSwitchCheckDefault");
+    let taxInfo = document.getElementsByClassName("tax-info");
+    taxSwitch.addEventListener("click", () => {
+      let taxInfo = document.getElementsByClassName("tax-info");
+      for(info of taxInfo) {
+        if(info.style.display != "inline"){
+          info.style.display = "inline";
+        } else {
+          info.style.display = "none";
+        }
+        
+      }
+    });
+  </script>
