--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -65,7 +65,7 @@
                                 <div class="card col-5 ms-3 mb-3">
                                     <div class="card-body">
                                         <h5 class="card-title">@<%= review.author.username %></h5>
-                                        <p class="starability-result" data-rating="3">
+                                        <p class="starability-result">
                                             <%= review.rating %>
                                         </p>
                                         <p class="card-text mb-2"><%= review.comment %></p>
