--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -12,7 +12,19 @@
                 <label for="password" class="form-lable">Password</label>
                 <input name="password" id="password" type="password" class="form-control" required/>
             </div>
-            <button class="btn btn-success">Login</button>
+            <div class="mb-3">
+                <label class="form-label">Role</label><br />
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="role" id="student" value="student" required />
+                    <label class="form-check-label" for="student">Student</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="role" id="admin" value="admin" required />
+                    <label class="form-check-label" for="admin">Admin</label>
+                </div>
+                <div class="valid-feedback">Please select a role</div>
+            </div>
+            <button class="btn btn-success" type="submit">Login</button>
         </form>
     </div>
 </div>
