--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -5,13 +5,18 @@
     <div class="col-8 offset-3">
         <form action="/signup" method="post" novalidate class="needs-validation">
             <div class="mb-3">
-                <label for="username" class="form-label">Name</label>
+                <label for="username" class="form-label">Username</label>
                 <input name="username" id="username" type="text" class="form-control" required />
                 <div class="valid-feedback">Looks good</div>
             </div>
             <div class="mb-3">
+                <label for="username" class="form-label">Name</label>
+                <input name="name" id="username" type="text" class="form-control" required />
+                <div class="valid-feedback">Looks good</div>
+            </div>
+            <div class="mb-3">
                 <label for="College" class="form-label">College</label>
-                <input name="College" id="College" type="text" class="form-control" required />
+                <input name="college" id="College" type="text" class="form-control" required />
                 <div class="valid-feedback">Looks good</div>
             </div>
             <div class="mb-3">
