--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/css/home.css">
 <style>
     .hero {
-      background: url('hero.jpg') no-repeat center center;
+      background: url('/image/hero.jpg') no-repeat center center;
       background-size: cover;
       margin-top: 5px;
       color: #fff;
@@ -204,7 +204,7 @@
       <img src="admin.png" alt="Admin Image">
       <h3>Admin Interface</h3>
       <p>Review, approve, or reject student applications seamlessly.</p>
-      <a href="/admin" class="btn btn-primary btn-lg">Manage Applications</a>
+      <a href="/admin/home" class="btn btn-primary btn-lg">Manage Applications</a>
     </div>
   </div>
 </section>
