--- a/views/admin/view-application.ejs
+++ b/views/admin/view-application.ejs
@@ -94,7 +94,7 @@
         <div class="card-body">
             <h4 class="card-title">Student Information</h4>
             <hr>
-            <p><strong>Name:</strong> <%= application.studentId.username %></p>
+            <p><strong>Name:</strong> <%= application.studentId.name %></p>
             <p><strong>Email:</strong> <%= application.studentId.email %></p>
             <p><strong>College:</strong> <%= application.studentId.college %></p>
         </div>
